Constrain images to 80vh in landscape to avoid portrait overflow

--- a/assets/agency.css
+++ b/assets/agency.css
@@ -239,4 +239,8 @@ color: #222; /* override green link color inherited from <a> */
 
 .container img {
 	max-width: 100%;
+
+	@media (orientation: landscape) {
+		max-height: 80vh;
+	}
 }
